--- a/home-style.css
+++ b/home-style.css
@@ -1,22 +1,21 @@
 body{
-
+  margin: 0px
 }
 p{
   /*   font-family: "Roboto", "Text me one", sans-serif;  */
   margin: 10px
 
 }
+
 .container{
   display: flex;
   width: 100vw;
   height: 100vh;
   align-items: flex-end;
   justify-content: center;
-
   background-image: url(images/background-home.jpg);
   background-size: contain;
   background-repeat: no-repeat;
-
 }
 .box{
   border:10px;
@@ -44,11 +43,10 @@ p{
 }
 .Roboto{
   font-family: "Roboto", sans-serif;
-  font-size: 40px
+  font-size: 40px;
   font-style: normal;
-  font-weight: 900;
-  text-align: center
-  line-height: 14px
+  text-align: center;
+  line-height: 50px;
 }
 .phone-suffix{
   background-color: rgba(167, 222, 182, 0.38);
@@ -56,5 +54,7 @@ p{
 
 }
 .go-btn{
-  text-decoration-color: green;
+  color: #2ACD56;
+  font-weight: bolder;
+  text-decoration: none;
 }
