--- a/home-style.css
+++ b/home-style.css
@@ -19,7 +19,6 @@ p{
 }
 .box{
   border:10px;
-  padding: 100px;
   margin:10px;
 
 }
@@ -27,7 +26,7 @@ p{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 20px;
+  margin: 40px;
   padding: 25px;
   border: 20px;
   background-color: white;
@@ -39,7 +38,7 @@ p{
   color: #000000;
   text-align: center;
   font-size: 150px;
-  margin: 1px;
+  margin: 20px;
 }
 .Roboto{
   font-family: "Roboto", sans-serif;
@@ -57,4 +56,7 @@ p{
   color: #2ACD56;
   font-weight: bolder;
   text-decoration: none;
+}
+.welcome-text{
+  padding: 40px;
 }
