--- a/home-style.css
+++ b/home-style.css
@@ -15,7 +15,7 @@ p{
   justify-content: center;
   background-image: url(images/background-home.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 .box{
   border:10px;
