--- a/car-choice-style.css
+++ b/car-choice-style.css
@@ -1,1 +1,44 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+.container{
+  background-image: url(images/map.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 
+}
+.flexbox{
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.margins-boxes{
+  margin: 40px;
+  padding: 30px;
+}
+.car-choose{
+  text-align: center;
+}
+p{
+  font-size: 55px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+}
+.pin-link{
+  position: absolute;
+  right: 0;
+  height: 300px;
+  width: 300px;
+  /*
+  background:red;
+  */
+
+}
