--- a/home-style.css
+++ b/home-style.css
@@ -3,9 +3,7 @@
   padding: 0px;
 }
 p{
-  /*   font-family: "Roboto", "Text me one", sans-serif;  */
-  margin: 10px
-
+  /*   margin: 10px  */
 }
 
 .container{
