--- a/car-choice-style.css
+++ b/car-choice-style.css
@@ -40,5 +40,14 @@ p{
   /*
   background:red;
   */
-
+}
+.search-bar{
+  background: white;
+  border-radius: 30px;
+}
+.car-choose{
+  background: white;
+  border-radius: 50px;
+  padding: 1px;
+  border: solid;
 }
