--- a/menu-style.css
+++ b/menu-style.css
@@ -1,3 +1,10 @@
+.container{
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	background-image: url(pictures/carte.css);
+}
 .green-box{
 	height: 500px;
 	width: 500px;
@@ -9,7 +16,7 @@ img{
 	width: 500px
 }
 
-.car h1{
+#car {
 	text-align: center;
 }
 
@@ -45,7 +52,7 @@ img{
 	padding: 10px;
 	box-shadow: 0 100px 30px rgb(0 0 0/10%);
 	border-radius: 10px;
-	margin: 25px;	
+	margin: 25px;
 
 	display: contents;
 	justify-content: center;
@@ -59,8 +66,8 @@ img{
 	background: white;
 	border-radius: 30px;
 	margin-bottom: 10px;
-	text-align: center; 
-	
+	text-align: center;
+
 }
 
 .start{
@@ -69,5 +76,5 @@ img{
 	background: white;
 	border-radius: 30px;
 	text-align: center;
-	
+
 }
