--- a/menu-style.css
+++ b/menu-style.css
@@ -3,7 +3,7 @@
 	width: 100vw;
 	display: flex;
 	justify-content: center;
-	background-image: url(pictures/carte.css);
+	background-image: url(picture/carte.jpg);
 }
 .green-box{
 	height: 500px;
