--- a/menu-style.css
+++ b/menu-style.css
@@ -3,11 +3,18 @@
 	width: 100vw;
 	display: flex;
 	justify-content: center;
+	align-items: flex-end;
 	background-image: url(picture/carte.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .green-box{
-	height: 500px;
-	width: 500px;
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
+	align-items: center;
+	height: 40vh;
+	width: 100vw;
 	background: green;
 	border-radius: 30px 30px 0 0;
 }
@@ -16,27 +23,31 @@ img{
 	width: 500px
 }
 
-#car {
+h1 {
 	text-align: center;
+	margin: 5px;
 }
 
 .car-info{
 	background-color: green;
-	padding: 1px;
+	padding: 0px;
 	box-shadow: 0 100px 30px rgb(0 0 0/10%);
 	border-radius: 4px;
 	text-align: center;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	margin: 25px;
+	margin: 5px;
+	font-size: 40px;
 }
 
 .fuel{
 	height: auto;
 	width: auto;
 	background: white;
-	border-radius: 30px;
+	border-radius: 40px;
+	padding: 20px;
+	margin-left: 5px;
 
 }
 
@@ -44,7 +55,9 @@ img{
 	height: auto;
 	width: auto;
 	background: white;
-	border-radius: 30px;
+	border-radius: 40px;
+	padding: 20px;
+	margin-right: 5px;
 }
 
 .choice{
@@ -52,29 +65,37 @@ img{
 	padding: 10px;
 	box-shadow: 0 100px 30px rgb(0 0 0/10%);
 	border-radius: 10px;
-	margin: 25px;
+	margin: 10px;
 
-	display: contents;
+	/*
+display: contents;
 	justify-content: center;
-	align-items: center;
+	align-items: center;*/
+
+
 
 }
 
 .blink{
-	height: 70px;
-	width: 300px;
 	background: white;
 	border-radius: 30px;
-	margin-bottom: 10px;
+	margin: 10px;
 	text-align: center;
+	font-size: 50px;
+	padding: 10px;
 
 }
 
 .start{
-	height: 70px;
-	width: 300px;
 	background: white;
 	border-radius: 30px;
+	margin: 10px;
 	text-align: center;
+	font-size: 50px;
+	padding: 10px;
 
+}
+.car{
+	margin: 0px;
+	padding: 5px;
 }
